---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_ordering_collision/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
module_a = _cribo.types.SimpleNamespace(__name__='module_a', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_12d4a8_module_a(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    """First module with metaclass and class - will have original names."""

    class YAMLObjectMetaclass(type):
        """The metaclass for YAMLObject."""

        def __init__(cls, name, bases, kwds):
            super(YAMLObjectMetaclass, cls).__init__(name, bases, kwds)
            if "yaml_tag" in kwds and kwds["yaml_tag"] is not None:
                cls._registered_a = True
    YAMLObjectMetaclass.__module__ = 'module_a'
    self.YAMLObjectMetaclass = YAMLObjectMetaclass

    class YAMLObject(metaclass=YAMLObjectMetaclass):
        """An object with metaclass from module_a."""
        yaml_tag = None

        def __init__(self):
            pass
    YAMLObject.__module__ = 'module_a'
    self.YAMLObject = YAMLObject
    self.__initialized__ = True
    self.__initializing__ = False
    return self
module_a.__init__ = _cribo_init___cribo_12d4a8_module_a
module_b = _cribo.types.SimpleNamespace(__name__='module_b', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_276673_module_b(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    """Second module with same-named metaclass and class - will get renamed."""

    class YAMLObjectMetaclass(type):
        """Another metaclass with the same name."""

        def __init__(cls, name, bases, kwds):
            super(YAMLObjectMetaclass, cls).__init__(name, bases, kwds)
            if "yaml_tag" in kwds and kwds["yaml_tag"] is not None:
                cls._registered_b = True
    YAMLObjectMetaclass.__module__ = 'module_b'
    self.YAMLObjectMetaclass = YAMLObjectMetaclass

    class YAMLObject(metaclass=YAMLObjectMetaclass):
        """Another class with the same name but different metaclass."""
        yaml_tag = None

        def __init__(self):
            pass
    YAMLObject.__module__ = 'module_b'
    self.YAMLObject = YAMLObject
    self.__initialized__ = True
    self.__initializing__ = False
    return self
module_b.__init__ = _cribo_init___cribo_276673_module_b
"""Test that demonstrates metaclass ordering issue with name collisions."""
module_a = _cribo_init___cribo_12d4a8_module_a(module_a)
YAMLObject = module_a.YAMLObject
module_b = _cribo_init___cribo_276673_module_b(module_b)
YAMLObjectB = module_b.YAMLObject
def test_both_classes():
    """Test that both metaclass-based classes work."""

    class MyObjectA(YAMLObject):
        yaml_tag = "!myobject_a"

        def __init__(self, value):
            self.value = value
    obj_a = MyObjectA(42)
    assert obj_a.value == 42
    assert MyObjectA.yaml_tag == "!myobject_a"

    class MyObjectB(YAMLObjectB):
        yaml_tag = "!myobject_b"

        def __init__(self, value):
            self.value = value * 2
    obj_b = MyObjectB(21)
    assert obj_b.value == 42
    assert MyObjectB.yaml_tag == "!myobject_b"
    print("Both metaclass tests passed")
if __name__ == "__main__":
    test_both_classes()
